Resolves: tdf#121290 Crash, if press F4 for a selected callout

Change-Id: Idf73b21ae2f27f4966705c8faf9fd38abc502ae4